deploy/apps/base/desktop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desktop
  labels:
    app: desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desktop
  template:
    metadata:
      labels:
        app: desktop
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: portal
          image: ghcr.io/stutter-journal/eloquia-desktop:latest # {"$imagepolicy": "flux-system:eloquia-desktop"}
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/run-portal
          ports:
            - name: portal
              containerPort: 4000
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 20
            periodSeconds: 20
        - name: bff
          image: ghcr.io/stutter-journal/eloquia-desktop:latest # {"$imagepolicy": "flux-system:eloquia-desktop"}
          imagePullPolicy: IfNotPresent
          command:
            - /usr/local/bin/run-bff
          ports:
            - name: bff
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
